--- a/Days/ClientApp/src/app/components/inicio/inicio.component.html
+++ b/Days/ClientApp/src/app/components/inicio/inicio.component.html
@@ -1,1 +1,27 @@
-<p>inicio works!</p>
+
+<html>
+<app-navbar></app-navbar>
+<body>
+  <div class="padre">
+    <div class="hijo">
+      <div class="nieto_nombre">
+        21 Days
+        <hr style="height:2px;border-width:0;color:rgb(0, 0, 0);background-color:rgb(181, 253, 184)">
+        <br>
+        <div class="nieto_description">
+          ¡Bienvenido a 21 Days!
+          <br><br>
+          En la unica app en la que mejoras tus habitos favoritos acompañado de la gente que tiene el
+          mismo objetivo que tienes tú, mejorar para ser la mejor versión de ti mismo día a día.
+          <br>
+          <img src="../../../assets/pesa.svg" style="width:25% ;">
+          <br>
+        </div>
+        <div class="nieto_birthday">
+          ¡Selecciona un hábito para poder interactuar con otras personas!
+        </div><br />
+      </div><br />
+    </div>
+  </div>
+</body>
+</html>
