--- a/Days/ClientApp/src/app/components/habitoscom/habitoscom.component.css
+++ b/Days/ClientApp/src/app/components/habitoscom/habitoscom.component.css
@@ -1,4 +1,4 @@
-ody, html {
+body, html {
   margin: 0;
   padding: 0;
 }
@@ -37,7 +37,7 @@ ody, html {
   font-family: 'Lucida Sans';
   color: white;
   border-style: solid;
-  border-color: #5d9b9b;
+  border-color:#414a4c;
   border-radius: 20px;
   width: 500px;
   padding: 10px;
@@ -49,9 +49,9 @@ ody, html {
   margin-top: 30px;
   font-size: 20px;
   font-family: 'Lucida Sans';
-  color: white;
+  color: rgb(29, 29, 29);
   border-style: solid;
-  border-color: #5d9b9b;
+  border-color: #a0ffb0;
   border-radius: 20px;
   width: 500px;
   padding: 10px;
@@ -70,6 +70,8 @@ ody, html {
 .consejo {
   border-style: solid;
   border-radius: 5px;
-  border-color: #5d9b9b;
+  border-color: #414a4c;
   font-size: 25px;
 }
+
+
