--- a/Days/ClientApp/src/app/components/login/login.component.css
+++ b/Days/ClientApp/src/app/components/login/login.component.css
@@ -8,7 +8,7 @@
 
 body {
   font-family: 'Open Sans', sans-serif;
-  background: #e2e2e2;
+  background: #a0ffb0;
 }
 
 
@@ -18,20 +18,25 @@ body {
   left: 25%;
   display: block;
   margin-bottom: 80px;
-
   width: 500px;
-  height: 1500px;
+  height: 400px;
   background: #fff;
   border-radius: 5px;
   overflow: hidden;
   z-index: 1;
 }
 
-h2 {
+.deslogueado {
   padding: 40px;
   font-weight: lighter;
   text-transform: uppercase;
-  color: #414141;
+  color: forestgreen;
+}
+.logueado {
+  padding: 40px;
+  font-weight: lighter;
+  text-transform: uppercase;
+  color: forestgreen;
 }
 
 input {
@@ -52,13 +57,13 @@ input {
 &:hover,
 &:focus,
 &:active:focus {
-  color: #ff5722;
+  color: #a0ffb0;
   outline: none;
-  border-bottom: 1px solid #ff5722;
+  border-bottom: 1px solid #a0ffb0;
   &::placeholder
 
 {
-  color: #ff5722;
+  color: #a0ffb0;
   position: relative;
   -webkit-transform: translateY(-20px);
   transform: translateY(-20px);
@@ -75,7 +80,7 @@ input {
   z-index: 1;
   border-bottom: 1px solid rgba(0,0,0,.1);
   padding-left: 20px;
-  font-family: 'Open Sans', sans-serif; 
+  font-family: 'Open Sans', sans-serif;
   color: #858585;
   font-weight: lighter;
   -webkit-transition: .5s;
@@ -117,7 +122,7 @@ button {
 }
 
 &:nth-of-type(2) {
-  background: #ff5722;
+  background: #a0ffb0;
 }
 
 span {
@@ -133,12 +138,12 @@ span {
 &:hover {
   span
 
-  {
-    -webkit-transform: translateX(30px);
-    transform: translateX(30px);
-  }
+{
+  -webkit-transform: translateX(30px);
+  transform: translateX(30px);
+}
 
-  }
+}
 }
 
 .reg {
@@ -151,7 +156,7 @@ span {
   width: 20px;
   height: 20px;
   border-radius: 50px;
-  background: #673ab7;
+  background: white;
   z-index: 5;
   -webkit-transition: .8s ease-in-out;
   transition: .8s ease-in-out;
@@ -169,7 +174,7 @@ span {
   width: 20px;
   height: 20px;
   display: block;
-  background: #ff5722;
+  background: #a0ffb0;
   z-index: 5;
   -webkit-transition: .8s ease-in-out;
   transition: .8s ease-in-out;
@@ -181,19 +186,19 @@ h3 {
   left: 20%;
   text-transform: uppercase;
   font-weight: bolder;
-  color: rgba(255,255,255,.3);
+  color: #a0ffb0;
   -webkit-transition: .3s ease-in-out 1.2s;
   transition: .3s ease-in-out 1.2s;
 }
 
-.link{
-    color:black;
+.link {
+  color: black;
 }
 
-.register{
-    color:black
+.register {
+  color: black
 }
 
-.signin{
-    color:black
+.signin {
+  color: black
 }
